Fixed Blurry Fonts with Safari

--- a/src/app/appqos/appqos.component.scss
+++ b/src/app/appqos/appqos.component.scss
@@ -11,6 +11,8 @@
   .mat-tab-label {
     color: white !important;
     font-size: 14px;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
   }
   .mat-ink-bar {
     color: white !important;
