--- a/src/app/main/toolbar/toolbar.component.scss
+++ b/src/app/main/toolbar/toolbar.component.scss
@@ -14,6 +14,8 @@
         background: inherit;
         color: inherit;
         position: relative;
+        -webkit-font-smoothing: antialiased;
+        text-rendering: optimizeLegibility;
 
         .loading-bar {
             position: absolute;
